@@ -1,0 +1,11 @@
+// Copyright 2002-2012, University of Colorado
+package edu.colorado.phet.linegraphing.common.model;
+
+/**
+ * Base class for all straight lines.
+ *
+ * @author Chris Malley (cmalley@pixelzoom.com)
+ */
+public class StraightLine {
+    //TODO
+}
